[gd_scene load_steps=8 format=2]

[ext_resource path="res://Bola.tscn" type="PackedScene" id=1]
[ext_resource path="res://Campo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Raquete1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Raquete2.tscn" type="PackedScene" id=4]
[ext_resource path="res://inputIA.gd" type="Script" id=5]
[ext_resource path="res://InputJogador.gd" type="Script" id=6]
[ext_resource path="res://jogopingas.gd" type="Script" id=7]

[node name="jogopingas" type="Node"]
script = ExtResource( 7 )

[node name="Campo" parent="." instance=ExtResource( 2 )]

[node name="Bola" parent="." instance=ExtResource( 1 )]
position = Vector2( 622, 341 )

[node name="Raquete" parent="." instance=ExtResource( 3 )]
position = Vector2( 25, 325 )

[node name="inputJogador2" type="Node" parent="Raquete"]
script = ExtResource( 6 )

[node name="Raquete2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1220, 304 )

[node name="inputIA2" type="Node" parent="Raquete2"]
script = ExtResource( 5 )
caminho_bola = NodePath("../../Bola")

[node name="Label" type="Label" parent="."]
anchor_bottom = 0.022
margin_right = 234.0
margin_bottom = 99.7
rect_scale = Vector2( 2, 2 )
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
anchor_bottom = 0.022
margin_left = 800.0
margin_top = 2.0
margin_right = 1034.0
margin_bottom = 101.7
rect_scale = Vector2( 2, 2 )
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
anchor_bottom = 0.022
margin_left = 398.0
margin_top = 216.0
margin_right = 632.0
margin_bottom = 315.7
rect_scale = Vector2( 2, 2 )
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 120.0
autostart = true

[connection signal="gol_direita" from="Campo" to="." method="_on_Campo_gol_direita"]
[connection signal="gol_esquerda" from="Campo" to="." method="_on_Campo_gol_esquerda"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
